--- a/stories/Configure.mdx
+++ b/stories/Configure.mdx
@@ -1,4 +1,4 @@
-import { Meta } from "@storybook/blocks";
+import {Meta} from "@storybook/blocks";
 
 export const RightArrow = () => <svg
     viewBox="0 0 14 14"
@@ -20,7 +20,7 @@ export const RightArrow = () => <svg
 
 <div className="sb-container">
   <div className='sb-section-title'>
-    # Qeuosk Storybook
+    # Queosk 디자인 통일을 위한 스토리 북입니다.
 
   </div>
 
